# marketer

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  PRD.md  README.md  SPEC.md  alembic.ini  coverage.xml  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy.yml  terraform.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_user_profile_to_raw_briefs.py  003_subscription_strategy.py  004_dispatch_status.py  005_add_create_prod_line_action.py  (+1 more)
docs/: ADR PAYLOAD.md  BRIEF RESPONSE API.md  LATEST ROUTER REQUEST.md  PERSISTENCE.md  ROUTER CONTRACT.md  ROUTER MAIN INSTRUCTIONS.md  SPEC.md  golden_reference.md
samples/: casa_maruja_run.json  divenamic_callback.json  divenamic_demo.html  divenamic_run.json  marketer_demo.html  marketer_demo_v1.html  marketer_demo_v2.html  multi_surface_demo_v1.html
scripts/: batch_test.py  build_demo_html.py  build_multi_demo_html.py  build_nubiex_demo_html.py  build_vision_poc_html.py  check_alembic_lineage.py  db_e2e_smoke.py  demo_router_roundtrip.py  inspector.py  multi_surface_test.py  nubiex_power_test.py  quick_run.py  run_fixture.py  smoke_async_roundtrip.py  vision_poc.py
tests/: REAL_PAYLOAD.md  bodys_example.md  conftest.py  test_db_integration.py  test_gallery.py  test_golden_casa_maruja.py  test_main_async.py  test_main_multi_dispatch.py  test_normalizer.py  test_normalizer_user_profile.py  test_reasoner_context.py  test_reasoner_failures.py  test_reasoner_fanout.py  test_subscription_strategy.py  test_validator.py  true CF payload.md
(+135 files in other folders)
