[project]
name = "marketer"
version = "0.1.0"
requires-python = ">=3.11"
description = "Master Marketing Agent microservice"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
